// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CriteriaRow should render 1`] = `
<DocumentFragment>
  <div
    class="criterion-row-root"
  >
    <div
      class="edit-container"
    >
      <div
        class="drag-icon"
      >
        <svg
          aria-hidden="true"
          class="lexicon-icon lexicon-icon-drag"
          viewBox="0 0 512 512"
        >
          <use
            xlink:href="#drag"
          />
        </svg>
      </div>
      <span
        class="criterion-string"
      >
        <b>
          Test Property
        </b>
      </span>
      <select
        class="form-control criterion-input operator-input form-control"
      />
      <input
        class="criterion-input form-control"
        data-testid="simple-string"
        type="text"
        value="test_val"
      />
      <button
        class="btn btn-outline-secondary btn-monospaced btn-outline-borderless"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lexicon-icon lexicon-icon-paste icon"
          viewBox="0 0 512 512"
        >
          <use
            xlink:href="#paste"
          />
        </svg>
      </button>
      <button
        class="btn btn-outline-secondary btn-monospaced btn-outline-borderless"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lexicon-icon lexicon-icon-times-circle icon"
          viewBox="0 0 512 512"
        >
          <use
            xlink:href="#times-circle"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CriteriaRow should render and inform there is an unknown property 1`] = `
<DocumentFragment>
  <div
    class="criterion-row-root criterion-row-root-error"
  >
    <div
      class="edit-container"
    >
      <div
        class="drag-icon"
      >
        <svg
          aria-hidden="true"
          class="lexicon-icon lexicon-icon-drag"
          viewBox="0 0 512 512"
        >
          <use
            xlink:href="#drag"
          />
        </svg>
      </div>
      <span
        class="criterion-string"
      >
        <b>
          unknown_prop
        </b>
      </span>
      <select
        class="form-control criterion-input operator-input form-control"
        disabled=""
      />
      <input
        class="criterion-input form-control"
        data-testid="simple-string"
        disabled=""
        type="text"
        value="test_val"
      />
      <button
        class="btn btn-outline-danger"
        type="button"
      >
        delete
      </button>
    </div>
  </div>
  <div
    class="alert alert-danger bg-transparent p-1 mt-1 border-0"
    role="alert"
  >
    <span
      class="alert-indicator"
    >
      <svg
        class="lexicon-icon lexicon-icon-check-circle-full"
        focusable="false"
        role="presentation"
      >
        <use
          href="#exclamation-full"
        />
      </svg>
    </span>
    <strong
      class="lead"
    >
      error:
    </strong>
    criteria-error-message-edit
  </div>
</DocumentFragment>
`;
